--- a/thesis.bib
+++ b/thesis.bib
@@ -87,7 +87,7 @@
   interaction in smart architecture},
  journal = {IBPSA},
  year = {2006},
- }  
+ }
 
 @article{SEEDS,
  author = {\"{O}mer Akin and Rana Sen and Magd Donia and Ye Zhang},
@@ -120,4 +120,110 @@ url = "http://www.sciencedirect.com/science/article/B6V0P-47XSXC4-2J/2/e16c845d2
 author = "L. Myers and J. Pohl",
 }
  
- 
+@INPROCEEDINGS{Randell92aspatial,
+    author = {David A. Randell and Zhan Cui and Anthony G. Cohn},
+    title = {A Spatial Logic based on Regions and Connection},
+    booktitle = {PROCEEDINGS 3RD INTERNATIONAL CONFERENCE ON KNOWLEDGE REPRESENTATION AND REASONING},
+    year = {1992},
+    publisher = {}
+}
+@MISC{Freksa92usingorientation,
+    author = {Christian Freksa},
+    title = {Using Orientation Information for Qualitative Spatial Reasoning},
+    year = {1992}
+} 
+@inproceedings{Moratz,
+ author = {Moratz, Reinhard},
+ title = {Representing Relative Direction as a Binary Relation of Oriented Points},
+ booktitle = {Proceeding of the 2006 conference on ECAI 2006},
+ year = {2006},
+ isbn = {1-58603-642-4},
+ pages = {407--411},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ }
+
+@incollection {WallaceCLP,
+   author = {Wallace, Mark},
+   affiliation = {William Penney Laboratory, Imperial College IC-Parc London SW7 2AZ},
+   title = {Constraint Logic Programming},
+   booktitle = {Computational Logic: Logic Programming and Beyond},
+   series = {Lecture Notes in Computer Science},
+   editor = {Kakas, Antonis and Sadri, Fariba},
+   publisher = {Springer Berlin / Heidelberg},
+   pages = {35-64},
+   volume = {2407},
+   year = {2002}
+}
+
+@inproceedings{GavanelliCLP,
+  author    = {Marco Gavanelli and
+               Francesca Rossi},
+  title     = {Constraint Logic Programming},
+  booktitle = {25 Years GULP},
+  year      = {2010},
+  pages     = {64-86},
+}
+
+@article{CHR,
+title = "Theory and practice of constraint handling rules",
+journal = "The Journal of Logic Programming",
+volume = "37",
+number = "1-3",
+pages = "95 - 138",
+year = "1998",
+note = "",
+issn = "0743-1066",
+doi = "DOI: 10.1016/S0743-1066(98)10005-5",
+url = "http://www.sciencedirect.com/science/article/B6V0J-3VTB87X-4/2/7bed50d3bf24dffea89c2cf9574dd614",
+author = "Thom Frühwirth"
+}
+
+
+@book{Sterling:1986,
+  address = {Cambridge (MA)},
+  author = {Leon Sterling and Ehud Shapiro},
+  interhash = {da3799615a0ab69b57bf66ce3de47d5d},
+  intrahash = {321eebc10b64430a02ec974bec126056},
+  publisher = {MIT Press},
+  title = {The Art of Prolog},
+  year = 1986,
+  keywords = {prolog},
+  added-at = {2007-12-14T02:46:58.000+0100},
+  biburl = {http://www.bibsonomy.org/bibtex/2321eebc10b64430a02ec974bec126056/diego_ma}
+}
+
+@article{Cohn:2001:QSR,
+ author = {Cohn, A. G. and Hazarika, S. M.},
+ title = {Qualitative Spatial Representation and Reasoning: An Overview},
+ journal = {Fundam. Inf.},
+ volume = {46},
+ issue = {1-2},
+ month = {January},
+ year = {2001},
+ issn = {0169-2968},
+ pages = {1--29},
+ numpages = {29},
+ url = {http://portal.acm.org/citation.cfm?id=1219982.1219984},
+ acmid = {1219984},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Ontology, Qualitative Spatial Reasoning},
+}
+@inproceedings{Jaffar:1987:CLP,
+ author = {Jaffar, J. and Lassez, J.-L.},
+ title = {Constraint logic programming},
+ booktitle = {Proceedings of the 14th ACM SIGACT-SIGPLAN symposium on Principles of programming languages},
+ series = {POPL '87},
+ year = {1987},
+ isbn = {0-89791-215-2},
+ location = {Munich, West Germany},
+ pages = {111--119},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/41625.41635},
+ doi = {http://doi.acm.org/10.1145/41625.41635},
+ acmid = {41635},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
