--- a/thesis.bib
+++ b/thesis.bib
@@ -179,6 +179,13 @@ url = "http://www.sciencedirect.com/science/article/B6V0J-3VTB87X-4/2/7bed50d3bf
 author = "Thom Frühwirth"
 }
 
+@article{formfunction,
+title = "The tall office building artistically considered",
+journal = "Lippincott's Magazine",
+year = "1896",
+author = "Louis Sullivan"
+}
+
 
 @book{Sterling:1986,
   address = {Cambridge (MA)},
