--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -308,20 +308,25 @@ The CRR is a framework for validating conceptual design requirements against CAA
 The goal of the CRR is to build a computational framework that represents and reasons about design requirements in the context of conceptual design requirement validation.     
 
 \section{Design Problem}
-Humans reason about space from a qualitative level, this means we think about our environment in (qualitative) terms such as, "the elm tree is next to the house", instead of (quantitative) terms like, "the center of the elm tree is 4.54 meters away from exterior of the house". Our natural cognitive intuition for qualitative instead of quantitative is the crux of how humans efficiently and effectively represent and reason about our spatial environments and is the topic of much research \cite{freksa1991qsr} \cite{Cohn:2001:QSR}.
+Humans reason about space on a qualitative level, this means we think about our environment in (qualitative) terms such as, "the elm tree is next-to the house", instead of (quantitative) terms like, "the exterior part of the elm tree is 4.54 meters away from the exterior part of the house". The main distinction between the two is based on the level of spatial abstraction; qualitative represents a high level while quantitative represent a low level of abstraction. Our natural cognitive intuition to use qualitative instead of quantitative is the crux of how humans efficiently and effectively represent and reason about our spatial environments and is the topic of much research \cite{freksa1991qsr} \cite{Cohn:2001:QSR}.
 
-The domain of architectural design is quite interesting in this respect because it depends on both aspects of space: qualitative and quantitative. In architectural design literature this distinction is commonly reffed to as \emph{form} and \emph{function}, in which the common phrase goes "\emph{form follows function}" \cite{formfunction}. In general, the context of the phrase supports the idea that the form (structure) should be determines based on its function or purpose. Now the focus here is not on the philosophy of design or an argument about the validity of such claims, but is to point out that it has been argued that these two spatial perspective are both inherent in and crucial to the success of an architectural design.
+The domain of architectural design is quite interesting in this respect because it relies on both aspects of space: qualitative and quantitative. In the architectural design literature \cite{} this distinction is commonly reffed to as \emph{form} and \emph{function}, in which the common phrase goes "\emph{form follows function}" \cite{formfunction}. In general, the context of this phrase supports the doctrine that the form (structure) should be determined by its function (purpose). For decades there has been a plethora of debate on the interpretation of these claims and its validity with a practical design context. For the purposes here the focus is not on the philosophy of design or any argument about the validity of such claims, but is an introduction to the idea that architectural design is inherently defined by and intertwined with the qualitative and quantitative aspects of space.
 
+Research that supports this perspective on design and space, address many design problems as they occur during the lifetime of an architectural design project, such as: design conceptualization, geometric modeling, structural consistency \& code checking, and many others \cite{Bayazit} \cite{bhattSpatialComputing}. However, most research in this area unfortunately tends to focus on one aspect of space or the other but not both, i.e. quantitative but not qualitative or qualitative but not quantitative. For example, structural consistency \& code checking \cite{} involves the process of validating an architectural design against constraints on the quantitative geometric structures of the design, while design conceptualization involve modeling the basic spaces / zones of the architectural design from a qualitative perspective. 
+
+The tendency to focus on one aspect of space is especially true for state-of-the-art CAAD programs. This happens because CAAD programs provide an environment for architects to build a precise schematization of an architectural design with the purpose of using it as a blueprint during the design's realization. In essence, this means that there needs to be a direct and one-to-one correlation between the schematization of the design as defined by its representation of space and the design's physical manifestation in the real world. Consequently, CAAD programs represent the spatial features of a design, with respect to the individual elements that make up the design, from a perspective that captures its precise geometric form, i.e. the size, shape, location, and placement. This representation is akin to the representation of spatial objects in an coordinate system in R2.
+
+This type of representation serves its purpose well (building a design in the real world) and can provides for some types of spatial reasoning over it, such as geometric reasoning (i.e. properties of angles, shapes, sizes, parallelism, etc.) and checking for higher level requirements, such as the load bearing capacity of building elements and structural integrity. However, the second form of reasoning requires additional knowledge (building materials and load barring properties) that go beyond the semantics of the design's spatial quantities. In this regard, the CAAD based representation makes it difficult to reason about aspects of the design from a conceptual level, i.e. the semantics that involve the design's function or purpose. The difficulty emerges in this regard because the conceptual aspects of a design define its abstract features while the CAAD based representation is grounded to a concrete and spatially general form that lacks the semantic at the conceptual level. In other words, there is a \emph{semantic gap} between the conceptual aspects of the design and it's CAAD based representation that is separated by the different levels of abstraction for each.
+
+This is where this thesis hopes to provide it contribution, by providing a framework that bridges the gap between a design's conceptualizations to it's precise geometric underpinnings.  
 
   
-CAAD systems do not allow architects to reason about designs from a conceptual / spatial level
-  - architectural plans are represented precisely 
-      - so that they can be used as blueprints in the building process
-  - does not support the mapping between high level conceptual space and low level quantity space
 
-State-of-the-art CAAD tools represent the physical and structural aspects of an architectural design in a manner that is precise so that the computer based plan can be used as a blueprint in the building process. This type of representation captures the design, in terms of the spatial features, spatial dimensions of architectural entities, placement of entities within the building, at a low-level of granularity that is needed in the actual construction of the building, and allows for reasoning about the physical, structural and mechanical aspects of a design with regard to the precise geometric representation; such as the placement of a door in a wall or the mechanics of a window swinging open and closed. TODO: talk about x,y,z coordinates of real space, quantitative representation.
+%construct a designs in a manner that directly corresponds to the realization of the design and therefore requires a precise representation of space. This type of representation needs to know about many aspects of a designs spatial features including the size, shape, dimensions, placement, and location of the individual elements that make up the building.   
 
-However, this type of representation scheme does not incorporation the qualitative and functional features of the design. For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. For a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to qualitative spatial design features and functional attributes that go beyond the purely geometric representation of the design, i.e., in this case the qualitative spatial relationship between a window and doorway.
+%To make this possible, architectural designs are represented based on their structural form in a manner that captures its spatial properties precisely. This type of representation captures the design, in terms of the spatial features, spatial dimensions of architectural entities, placement of entities within the building, at a low-level of granularity that is needed in the actual construction of the building, and allows for reasoning about the physical, structural and mechanical aspects of a design with regard to the precise geometric representation; such as the placement of a door in a wall or the mechanics of a window swinging open and closed. TODO: talk about x,y,z coordinates of real space, quantitative representation.
+
+%However, this type of representation scheme does not incorporation the qualitative and functional features of the design. For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. For a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to qualitative spatial design features and functional attributes that go beyond the purely geometric representation of the design, i.e., in this case the qualitative spatial relationship between a window and doorway.
 
 
 \section{Approach}
